# force_feedback_mpc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  package.xml  verify_fix.py
.github/workflows/: update-flake-lock.yml
benchmarks/: CMakeLists.txt  timings.hpp  ur5.cpp
bindings/: CMakeLists.txt  force-feedback-mpc-python.hpp  main.cpp
bindings/force_feedback_mpc/: __init__.py
bindings/frictioncone/: residual-friction-cone-augmented.cpp  residual-friction-cone.cpp
bindings/jerk/: state.cpp
bindings/lowpassfilter/: action.cpp  state.cpp
bindings/softcontact/: dam-augmented.cpp  dam-augmented.hpp  dam1d-augmented.cpp  dam1d.cpp  dam3d-augmented-friction.cpp  dam3d-augmented.cpp  dam3d.cpp  iam-augmented.cpp  multicontact.cpp  state.cpp
build_debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  force_feedback_mpc.pc  install_manifest.txt  libforce_feedback_mpc.so.1.0
build_debug/cmake/: cmake_reinstall.cmake.configured  cmake_uninstall.cmake
build_debug/cmake/Release/: cmake_reinstall.cmake
build_debug/include/force_feedback_mpc/: config.hh  deprecated.hh  warning.hh
build_debug/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_debug/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_debug/tests/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
demos/analysis/: analyze.py  plot_ee_f_IROS.py  plot_perf_tilt_IROS.py  plot_perf_tilt_SEEDS_IROS.py  plot_state_IROS.py
demos/contact/: aug_soft_contact_OCP.py  aug_soft_contact_OCP_constraints.py
demos/contact/config/: force_tracking_soft_constraints.yml  iiwa_aug_soft_contact_OCP.yml  iiwa_reduced_aug_soft_contact_OCP.yml  talos_arm_contact_OCP.yml
demos/core_mpc_utils/: sim_utils.py
demos/force_tracking/: quadruped.py
demos/force_tracking/classical/: force_tracking_classical.yml  force_tracking_classical_friction.yml  force_tracking_classical_mpc.py  force_tracking_classical_ocp.py
demos/force_tracking/lpf/: force_tracking_lpf.yml  force_tracking_lpf_mpc.py  force_tracking_lpf_ocp.py
demos/force_tracking/soft/: force_tracking_soft.yml  force_tracking_soft_friction.yml  force_tracking_soft_mpc.py  force_tracking_soft_ocp.py
demos/go2arm/: Go2MPC_demo_classical.py  Go2MPC_demo_classical.yml  Go2MPC_demo_soft.py  Go2MPC_demo_soft.yml  Go2MPC_wrapper_classical.py  Go2MPC_wrapper_soft.py  classical.py  friction_utils.py
demos/polishing/: polishing_classical_constraint.yml  polishing_classical_mpc.py  polishing_soft_constraint.yml  polishing_soft_mpc.py  polishing_soft_mpc_TILT_EXP.py
demos/polishing/classical/: polishing_classical.yml  polishing_classical_mpc.py  polishing_classical_mpc_TILT_EXP.py  polishing_classical_mpc_obstacle.py  polishing_classical_obstacle.yml  polishing_classical_ocp.py
demos/polishing/lpf/: polishing_lpf.yml  polishing_lpf_mpc.py  polishing_lpf_mpc_TILT_EXP.py  polishing_lpf_mpc_obstacle.py  polishing_lpf_obstacle.yml  polishing_lpf_ocp.py
demos/polishing/soft/: bug_calc.py  polishing_soft.yml  polishing_soft_mpc.py  polishing_soft_mpc_TILT_EXP.py  polishing_soft_mpc_obstacle.py  polishing_soft_obstacle.yml  polishing_soft_ocp.py  (+1 more)
demos/sanding/: aug_soft_sanding_OCP.py
environments/: force_feedback_mpc.yml
include/: fwd.hpp
include/force_feedback_mpc/: force_feedback_mpc_python.hpp  fwd.hpp  python.hpp
python/: CMakeLists.txt  main.cpp  sqp.cpp  state.cpp
python/core_mpc_utils/: friction_utils.py  meshcat_utils.py  misc_utils.py  mpc_utils.py  sim_utils.py
python/force_feedback_mpc/: __init__.py
python/lowpassfilter/: action.cpp  state.cpp
python/lpf_mpc/: __init__.py  data.py  ocp.py
python/py_force_feedback_mpc/: __init__.py  lpf.py  soft.py
python/soft_mpc/: Go2MPC_demo.py  Go2MPC_demo.yml  Go2MPC_demo_soft.py  Go2MPC_demo_soft.yml  Go2MPC_wrapper.py  Go2MPC_wrapper_soft.py  __init__.py  aug_data.py  aug_ocp.py  aug_ocp_constraints.py  butterworth_table_order_2.yml  friction_utils.py  go2friction.py  meshcat_utils.py  ocp.py  plot_go2.py  plot_go2_compare.py  soft_models_1D.py  soft_models_3D.py  soft_models_3D_augmented.py  soft_multicontact_api.py  test_soft_multicontact_go2.py  test_soft_multicontact_kuka.py  test_utils.py  utils.py
python/softcontact/: dam-augmented.cpp  dam-augmented.hpp  dam1d-augmented.cpp  dam3d-augmented.cpp  iam-augmented.cpp  state.cpp
src/frictioncone/: residual-friction-cone-augmented.cpp  residual-friction-cone.cpp
src/jerk/: action.cpp  state.cpp
src/lowpassfilter/: action.cpp  action.hxx  state.cpp  state.hxx
src/softcontact/: dam-augmented.cpp  dam1d-augmented.cpp  dam1d.hxx  dam3d-augmented-friction.hxx  dam3d-augmented.cpp  dam3d.hxx  iam-augmented.cpp  multicontact.cpp  residual-force-base.cpp  residual-force-tracking.cpp  residual-gravity-torque-contact.cpp  state.cpp
tests/: CMakeLists.txt  common.hpp  random_generator.hpp  test.cpp  test_actions_lpf.cpp  test_actions_soft.cpp  test_actuations.cpp  test_diff_actions.cpp  test_diff_actions_soft1d.cpp  test_diff_actions_soft3d.cpp  test_diff_actions_soft3d_friction.cpp  test_states.cpp  test_states_lpf.cpp  test_states_soft.cpp
tests/factory/: action-lpf.cpp  action-lpf.hpp  action-soft.cpp  action-soft.hpp  actuation.cpp  actuation.hpp  diff-action-soft-abstract.cpp  diff-action-soft-abstract.hpp  diff-action-soft1d.cpp  diff-action-soft1d.hpp  diff-action-soft3d-friction.cpp  diff-action-soft3d-friction.hpp  diff-action-soft3d.cpp  diff-action-soft3d.hpp  diff-action.cpp  diff-action.hpp  pinocchio_model.cpp  pinocchio_model.hpp  state-lpf.cpp  state-lpf.hpp  state-soft.cpp  state-soft.hpp  state.cpp  state.hpp
tests/factory/crocoddyl/: activation.cpp  activation.hpp  actuation.cpp  actuation.hpp  contact.cpp  contact.hpp  cost.cpp  cost.hpp  pinocchio_model.cpp  pinocchio_model.hpp  state.cpp  state.hpp
tests/python/: CMakeLists.txt  check_malloc_lpf_ocp.py  check_malloc_soft_ocp_1d.py  check_malloc_soft_ocp_3d.py  lpf_ocp_1d.yml  polishing_soft_obstacle.yml  soft_ocp_1d.yml  soft_ocp_3d.yml  test_soft_ocp.py
(+21 files in other folders)
